packages/goo2d_ffi_box2d/src/goo_box2d.h

	// --- sanity ------------------------------------------------------------

	/// Box2D's version, packed as (major << 16) | (minor << 8) | revision.
	/// The Dart loader asserts against this so a stale prebuilt library on
	/// the library search path fails loudly at boot instead of subtly at
	/// the first step.
	GOO_API int32_t gooB2Version( void );
	// --- world -------------------------------------------------------------

	/// Creates a world with the given gravity. Returns a packed world
	/// handle, or 0 on failure.
	GOO_API int64_t gooWorldCreate( float gravityX, float gravityY );
	/// A world that steps across [workerCount] threads.
	///
	/// Box2D does not create threads; this hands it a pool that does, through
	/// `enqueueTask`/`finishTask`. A [workerCount] of 1 or less is exactly
	/// [gooWorldCreate] - no pool, no threads, no behavioural difference.
	///
	/// **The pool belongs to the world and is destroyed with it**, so a caller
	/// has one lifetime to think about rather than two. That is why this is a
	/// separate constructor instead of a setter: a world cannot change its
	/// worker count, and a pool cannot outlive its world.
	///
	/// Box2D warns that only performance cores help - efficiency cores and
	/// hyper-threading "provide little benefit and may even harm performance"
	/// - so more workers than physical cores is usually slower, not faster.
	GOO_API int64_t gooWorldCreateThreaded( float gravityX, float gravityY, int32_t workerCount );
	/// How many workers [world] was created with; 1 for a single-threaded one.
	GOO_API int32_t gooWorldWorkerCount( int64_t world );
	GOO_API void gooWorldDestroy( int64_t world );
	/// Advances the world by `timeStep` seconds. `subStepCount` is Box2D's
	/// solver iteration count; 4 is its own recommended default.
	GOO_API void gooWorldStep( int64_t world, float timeStep, int32_t subStepCount );
	// --- bodies ------------------------------------------------------------

	/// `type` is 0 static, 1 kinematic, 2 dynamic - Box2D's own b2BodyType
	/// values, asserted to match in goo_box2d.c so the Dart enum cannot
	/// drift from the C one silently.
	GOO_API int64_t gooBodyCreate( int64_t world, int32_t type, float x, float y, float angle );
	GOO_API void gooBodyDestroy( int64_t body );
	/// Removes the body from simulation without destroying it, keeping its
	/// handle valid. This is how a whole entity's physics goes inert;
	/// disabling one shape of several is gooShapeSetFilter with a zero mask.
	GOO_API void gooBodySetEnabled( int64_t body, int32_t enabled );
	/// Whether the handle still resolves to a live body. Box2D's ids carry
	/// a generation counter, so this correctly reports false for a stale
	/// handle whose slot has been reused - the same problem `Scene` solves
	/// with its own generation field.
	GOO_API int32_t gooBodyIsValid( int64_t body );
	GOO_API void gooBodySetTransform( int64_t body, float x, float y, float angle );
	/// Writes {x, y, angle} into `outXya` (3 floats).
	GOO_API void gooBodyGetTransform( int64_t body, float* outXya );
	GOO_API void gooBodySetLinearVelocity( int64_t body, float vx, float vy );
	GOO_API void gooBodySetAngularVelocity( int64_t body, float w );
	/// Writes {vx, vy, w} into `outVel` (3 floats).
	GOO_API void gooBodyGetVelocity( int64_t body, float* outVel );
	GOO_API void gooBodySetGravityScale( int64_t body, float scale );
	GOO_API void gooBodySetDamping( int64_t body, float linear, float angular );
	GOO_API void gooBodySetFixedRotation( int64_t body, int32_t fixed );
	GOO_API void gooBodySetBullet( int64_t body, int32_t bullet );
	GOO_API void gooBodySetType( int64_t body, int32_t type );
	GOO_API void gooBodyApplyForce( int64_t body, float fx, float fy, int32_t wake );
	GOO_API void gooBodyApplyImpulse( int64_t body, float ix, float iy, int32_t wake );
	/// Box2D v3 has no per-shape enable flag, so goo2d's
	/// `ColliderBody.enable` is expressed as a filter change: a zero mask
	/// collides with nothing. Dart passes both bits every time rather than
	/// this shim remembering a "real" mask to restore - the authoritative
	/// `layer`/`excludeLayers` already live in component storage, and
	/// caching a second copy here is the drift RULES.md rule 10 describes.
	GOO_API void gooShapeSetFilter( int64_t shape, uint64_t category, uint64_t mask );