packages/goo2d_ffi_box2d/lib/src/box2d.g.dart

// GENERATED FILE - DO NOT EDIT.
//
// Regenerate with:
//   dart run ffigen --config ffigen.yaml
//
// ignore_for_file: always_specify_types, camel_case_types
// ignore_for_file: non_constant_identifier_names, public_member_api_docs
// coverage:ignore-file

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Generated bindings to the goo2d Box2D shim (src/goo_box2d.h).
///
/// Do not edit by hand - regenerate with ffigen. See ffigen.yaml.
///
class Box2DBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  Box2DBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  Box2DBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Box2D's version, packed as (major << 16) | (minor << 8) | revision.
  /// The Dart loader asserts against this so a stale prebuilt library on
  /// the library search path fails loudly at boot instead of subtly at
  /// the first step.
  int gooB2Version() {
    return _gooB2Version();
  }

  late final _gooB2VersionPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('gooB2Version');
  late final _gooB2Version = _gooB2VersionPtr.asFunction<int Function()>();

  /// Creates a world with the given gravity. Returns a packed world
  /// handle, or 0 on failure.
  int gooWorldCreate(
    double gravityX,
    double gravityY,
  ) {
    return _gooWorldCreate(
      gravityX,
      gravityY,
    );
  }

  late final _gooWorldCreatePtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Float, ffi.Float)>>(
          'gooWorldCreate');
  late final _gooWorldCreate =
      _gooWorldCreatePtr.asFunction<int Function(double, double)>();

  /// A world that steps across [workerCount] threads.
  ///
  /// Box2D does not create threads; this hands it a pool that does, through
  /// `enqueueTask`/`finishTask`. A [workerCount] of 1 or less is exactly
  /// [gooWorldCreate] - no pool, no threads, no behavioural difference.
  ///
  /// **The pool belongs to the world and is destroyed with it**, so a caller
  /// has one lifetime to think about rather than two. That is why this is a
  /// separate constructor instead of a setter: a world cannot change its
  /// worker count, and a pool cannot outlive its world.
  ///
  /// Box2D warns that only performance cores help - efficiency cores and
  /// hyper-threading "provide little benefit and may even harm performance"
  /// - so more workers than physical cores is usually slower, not faster.
  int gooWorldCreateThreaded(
    double gravityX,
    double gravityY,
    int workerCount,
  ) {
    return _gooWorldCreateThreaded(
      gravityX,
      gravityY,
      workerCount,
    );
  }

  late final _gooWorldCreateThreadedPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int64 Function(ffi.Float, ffi.Float, ffi.Int32)>>(
      'gooWorldCreateThreaded');
  late final _gooWorldCreateThreaded = _gooWorldCreateThreadedPtr
      .asFunction<int Function(double, double, int)>();

  /// How many workers [world] was created with; 1 for a single-threaded one.
  int gooWorldWorkerCount(
    int world,
  ) {
    return _gooWorldWorkerCount(
      world,
    );
  }

  late final _gooWorldWorkerCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int64)>>(
          'gooWorldWorkerCount');
  late final _gooWorldWorkerCount =
      _gooWorldWorkerCountPtr.asFunction<int Function(int)>();

  void gooWorldDestroy(
    int world,
  ) {
    return _gooWorldDestroy(
      world,
    );
  }

  late final _gooWorldDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'gooWorldDestroy');
  late final _gooWorldDestroy =
      _gooWorldDestroyPtr.asFunction<void Function(int)>();

  /// Advances the world by `timeStep` seconds. `subStepCount` is Box2D's
  /// solver iteration count; 4 is its own recommended default.
  void gooWorldStep(
    int world,
    double timeStep,
    int subStepCount,
  ) {
    return _gooWorldStep(
      world,
      timeStep,
      subStepCount,
    );
  }

  late final _gooWorldStepPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Float, ffi.Int32)>>('gooWorldStep');
  late final _gooWorldStep =
      _gooWorldStepPtr.asFunction<void Function(int, double, int)>();

  /// `type` is 0 static, 1 kinematic, 2 dynamic - Box2D's own b2BodyType
  /// values, asserted to match in goo_box2d.c so the Dart enum cannot
  /// drift from the C one silently.
  int gooBodyCreate(
    int world,
    int type,
    double x,
    double y,
    double angle,
  ) {
    return _gooBodyCreate(
      world,
      type,
      x,
      y,
      angle,
    );
  }

  late final _gooBodyCreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(ffi.Int64, ffi.Int32, ffi.Float, ffi.Float,
              ffi.Float)>>('gooBodyCreate');
  late final _gooBodyCreate = _gooBodyCreatePtr
      .asFunction<int Function(int, int, double, double, double)>();

  void gooBodyDestroy(
    int body,
  ) {
    return _gooBodyDestroy(
      body,
    );
  }

  late final _gooBodyDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'gooBodyDestroy');
  late final _gooBodyDestroy =
      _gooBodyDestroyPtr.asFunction<void Function(int)>();

  /// Removes the body from simulation without destroying it, keeping its
  /// handle valid. This is how a whole entity's physics goes inert;
  /// disabling one shape of several is gooShapeSetFilter with a zero mask.
  void gooBodySetEnabled(
    int body,
    int enabled,
  ) {
    return _gooBodySetEnabled(
      body,
      enabled,
    );
  }

  late final _gooBodySetEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32)>>(
          'gooBodySetEnabled');
  late final _gooBodySetEnabled =
      _gooBodySetEnabledPtr.asFunction<void Function(int, int)>();

  /// Whether the handle still resolves to a live body. Box2D's ids carry
  /// a generation counter, so this correctly reports false for a stale
  /// handle whose slot has been reused - the same problem `Scene` solves
  /// with its own generation field.
  int gooBodyIsValid(
    int body,
  ) {
    return _gooBodyIsValid(
      body,
    );
  }

  late final _gooBodyIsValidPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int64)>>(
          'gooBodyIsValid');
  late final _gooBodyIsValid =
      _gooBodyIsValidPtr.asFunction<int Function(int)>();

  void gooBodySetTransform(
    int body,
    double x,
    double y,
    double angle,
  ) {
    return _gooBodySetTransform(
      body,
      x,
      y,
      angle,
    );
  }

  late final _gooBodySetTransformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float,
              ffi.Float)>>('gooBodySetTransform');
  late final _gooBodySetTransform = _gooBodySetTransformPtr
      .asFunction<void Function(int, double, double, double)>();

  /// Writes {x, y, angle} into `outXya` (3 floats).
  void gooBodyGetTransform(
    int body,
    ffi.Pointer<ffi.Float> outXya,
  ) {
    return _gooBodyGetTransform(
      body,
      outXya,
    );
  }

  late final _gooBodyGetTransformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int64, ffi.Pointer<ffi.Float>)>>('gooBodyGetTransform');
  late final _gooBodyGetTransform = _gooBodyGetTransformPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Float>)>();

  void gooBodySetLinearVelocity(
    int body,
    double vx,
    double vy,
  ) {
    return _gooBodySetLinearVelocity(
      body,
      vx,
      vy,
    );
  }

  late final _gooBodySetLinearVelocityPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float)>>(
      'gooBodySetLinearVelocity');
  late final _gooBodySetLinearVelocity = _gooBodySetLinearVelocityPtr
      .asFunction<void Function(int, double, double)>();

  void gooBodySetAngularVelocity(
    int body,
    double w,
  ) {
    return _gooBodySetAngularVelocity(
      body,
      w,
    );
  }

  late final _gooBodySetAngularVelocityPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float)>>(
          'gooBodySetAngularVelocity');
  late final _gooBodySetAngularVelocity =
      _gooBodySetAngularVelocityPtr.asFunction<void Function(int, double)>();

  /// Writes {vx, vy, w} into `outVel` (3 floats).
  void gooBodyGetVelocity(
    int body,
    ffi.Pointer<ffi.Float> outVel,
  ) {
    return _gooBodyGetVelocity(
      body,
      outVel,
    );
  }

  late final _gooBodyGetVelocityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int64, ffi.Pointer<ffi.Float>)>>('gooBodyGetVelocity');
  late final _gooBodyGetVelocity = _gooBodyGetVelocityPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Float>)>();

  void gooBodySetGravityScale(
    int body,
    double scale,
  ) {
    return _gooBodySetGravityScale(
      body,
      scale,
    );
  }

  late final _gooBodySetGravityScalePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float)>>(
          'gooBodySetGravityScale');
  late final _gooBodySetGravityScale =
      _gooBodySetGravityScalePtr.asFunction<void Function(int, double)>();

  void gooBodySetDamping(
    int body,
    double linear,
    double angular,
  ) {
    return _gooBodySetDamping(
      body,
      linear,
      angular,
    );
  }

  late final _gooBodySetDampingPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float)>>(
      'gooBodySetDamping');
  late final _gooBodySetDamping =
      _gooBodySetDampingPtr.asFunction<void Function(int, double, double)>();

  void gooBodySetFixedRotation(
    int body,
    int fixed,
  ) {
    return _gooBodySetFixedRotation(
      body,
      fixed,
    );
  }

  late final _gooBodySetFixedRotationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32)>>(
          'gooBodySetFixedRotation');
  late final _gooBodySetFixedRotation =
      _gooBodySetFixedRotationPtr.asFunction<void Function(int, int)>();

  void gooBodySetBullet(
    int body,
    int bullet,
  ) {
    return _gooBodySetBullet(
      body,
      bullet,
    );
  }

  late final _gooBodySetBulletPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32)>>(
          'gooBodySetBullet');
  late final _gooBodySetBullet =
      _gooBodySetBulletPtr.asFunction<void Function(int, int)>();

  void gooBodySetType(
    int body,
    int type,
  ) {
    return _gooBodySetType(
      body,
      type,
    );
  }

  late final _gooBodySetTypePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32)>>(
          'gooBodySetType');
  late final _gooBodySetType =
      _gooBodySetTypePtr.asFunction<void Function(int, int)>();

  void gooBodyApplyForce(
    int body,
    double fx,
    double fy,
    int wake,
  ) {
    return _gooBodyApplyForce(
      body,
      fx,
      fy,
      wake,
    );
  }

  late final _gooBodyApplyForcePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float,
              ffi.Int32)>>('gooBodyApplyForce');
  late final _gooBodyApplyForce = _gooBodyApplyForcePtr
      .asFunction<void Function(int, double, double, int)>();

  void gooBodyApplyImpulse(
    int body,
    double ix,
    double iy,
    int wake,
  ) {
    return _gooBodyApplyImpulse(
      body,
      ix,
      iy,
      wake,
    );
  }
